@@ -1,0 +1,5 @@
+if (CMAKE_MAJOR_VERSION GREATER 2)
+    cmake_policy(SET CMP0022 OLD) # interface link libraries
+    cmake_policy(SET CMP0042 NEW) # osx rpath
+    cmake_policy(SET CMP0011 NEW) # policy setting
+endif()
